MDEV-12721 Wrong execution plan for WHERE (date_field <=> timestamp_expr AND TRUE)